--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ NOTE: TP de deux slots de 1h20
 ## Nom des étudiants de ce binôme 
 WARNING: NE PAS OUBLIER DE MENTIONNER LES DEUX NOMS !
 
-#XXX# et #YYY#
+#Maxime Henaff# et #Lucas Détré#
 
 Commentaires éventuels des étudiants : #XXXXXX#
 
