--- a/README.adoc
+++ b/README.adoc
@@ -69,6 +69,14 @@ docker run --rm -it -e POSTGRES_PASSWORD=password -p 5432:5432 postgres
 ```
 IMPORTANT: [Question]  Expliquer cette ligne de commande (y compris les options utilisées) 
 
+```
+_docker run [...] postgres_ : lance un contener docker postgres
+_ --rm _ : cette option assure que le contener sera supprimé à la fin de son exécution
+_ -it _ : cette option permet de lancer le contener en mode interactif
+_ -e POSTGRES_PASSWORD=password _ : cette option permet de passer des arguments au contener à l'exécution sous la forme d'un ensemble clé=valeur
+_ -p 5432:5432 _ : associe le port du host au port du contener
+```
+
 IMPORTANT: [Question]  Lancer les commandes `docker ps` et `ps -eaf | grep postgres`, à quoi correspondent les lignes affichées ? Que remarquez vous ?
 
 * Compléter le code manquant dans la méthode `TodoListController.createTodoItem()`
