--- a/README.adoc
+++ b/README.adoc
@@ -108,7 +108,7 @@ todoItemRepository est null car nous n'avons pas injecter les dépendances, pour
 {
     "id": "0f8-06eb17ba8d34",
     "time": "2020-02-27T10:31:43Z",
-    "content": "Faire les courses"
+    "content": "Rester confiné"
   }
 ```
 ====
